load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("//bazel:defs.bzl", "volatile_status", "write_info_file_var")

bool_flag(
    name = "enable_malicious_code",
    build_setting_default = False,
)

config_setting(
    name = "malicious_code_enabled",
    flag_values = {
        ":enable_malicious_code": "True",
    },
)

bool_flag(
    name = "enable_fuzzing_code",
    build_setting_default = False,
)

config_setting(
    name = "fuzzing_code_enabled",
    flag_values = {
        ":enable_fuzzing_code": "True",
    },
)

# Flag to enable uploading performance system test results to the ES database
# that is connected to the testnet Grafana dashboard.
bool_flag(
    name = "enable_upload_perf_systest_results",
    build_setting_default = False,
)

config_setting(
    name = "upload_perf_systest_results_enabled",
    flag_values = {
        ":enable_upload_perf_systest_results": "True",
    },
)

# Allow targets to opt out of hermetic toolchains, in favor of the one provided
# by the system
bool_flag(
    name = "hermetic_cc",
    build_setting_default = True,
)

config_setting(
    name = "use_hermetic_cc",
    flag_values = {
        ":hermetic_cc": "True",
    },
)

string_flag(
    name = "timeout_value",
    build_setting_default = "10m",
    visibility = ["//visibility:public"],
)

write_info_file_var(
    name = "version.txt",
    varname = "STABLE_VERSION",
    visibility = ["//visibility:public"],
)

write_info_file_var(
    name = "commit_date_iso_8601.txt",
    varname = "STABLE_COMMIT_DATE_ISO_8601",
    visibility = ["//visibility:public"],
)

# This is the contents of the ctx.version_file, i.e. all non-STABLE_,
# volatile key value pairs outputted from ./workspace_status.sh.
#
# A note on the cache semantics:
# Say we have the following target that just saves the output of
# :volatile-status.txt to its output file:
#
#   genrule(
#       name = "what-is-volatile-status",
#       outs = ["what-is-volatile-status.txt"],
#       cmd = "cat $(location :volatile-status.txt) > $@",
#       tools = [":volatile-status.txt"],
#   )
#
# Building this in a fresh container yields:
# ./ci/container/container-run.sh bash -c \
#   'NODE_NAME=dm1-dll01 bazel build //bazel:what-is-volatile-status && cat bazel-bin/bazel/what-is-volatile-status.txt'
# BUILD_TIMESTAMP 1778503046
# DC dm1
# FORMATTED_DATE 2026 May 11 12 37 26 Mon
#
# The //bazel:what-is-volatile-status target should now be cached so changing the volatile keys
# should not change the output when we build it again (note we changed NODE_NAME to zh1):
# ./ci/container/container-run.sh bash -c \
#   'NODE_NAME=zh1-dll01 bazel build //bazel:what-is-volatile-status && cat bazel-bin/bazel/what-is-volatile-status.txt'
# BUILD_TIMESTAMP 1778503046
# DC dm1
# FORMATTED_DATE 2026 May 11 12 37 26 Mon
#
# However, let's say we change the what-is-volatile-status target such that it has to run again
# and use the new volatile keys. Then we would expect the output to change:
# ./ci/container/container-run.sh bash -c \
#   'NODE_NAME=zh1-dll01 bazel build //bazel:what-is-volatile-status && cat bazel-bin/bazel/what-is-volatile-status.txt'
# BUILD_TIMESTAMP 1778503130
# DC zh1
# FORMATTED_DATE 2026 May 11 12 38 50 Mon
volatile_status(
    name = "volatile-status.txt",
    visibility = ["//visibility:public"],
)

# Prebuilt protoc binary, selected by exec platform.
# Used instead of @protobuf//:protoc to avoid
# compiling protoc from C++ source on every build.
# Platform config_settings are defined in //:BUILD.bazel alongside platform() rules.
# Inspired by: https://github.com/protocolbuffers/protobuf/issues/19558
alias(
    name = "protoc",
    actual = select({
        "@bazel_tools//src/conditions:linux_x86_64": "@toolchains_protoc_hub.linux_x86_64//:bin/protoc",
        "@bazel_tools//src/conditions:linux_aarch64": "@toolchains_protoc_hub.linux_aarch_64//:bin/protoc",
        "@bazel_tools//src/conditions:darwin_x86_64": "@toolchains_protoc_hub.osx_x86_64//:bin/protoc",
        "@bazel_tools//src/conditions:darwin_arm64": "@toolchains_protoc_hub.osx_aarch_64//:bin/protoc",
    }),
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "prost_generator.sh",
        "generic_rust_bench.sh",
        "canbench.sh",
        "file_size_test.sh",
    ],
    visibility = ["//visibility:public"],
)

BUILDIFIER_EXCLUDES = [
    "./.git/*",
    "./ci/src/git_changes/test_data/**",
]

buildifier(
    name = "buildifier",
    exclude_patterns = BUILDIFIER_EXCLUDES,
    lint_mode = "fix",
    mode = "fix",
    visibility = ["//visibility:public"],
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = BUILDIFIER_EXCLUDES,
    lint_mode = "warn",
    mode = "diff",
    visibility = ["//visibility:public"],
)
