load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("//bazel:defs.bzl", "volatile_status", "write_stable_status_file_var")

bool_flag(
    name = "enable_malicious_code",
    build_setting_default = False,
)

config_setting(
    name = "malicious_code_enabled",
    flag_values = {
        ":enable_malicious_code": "True",
    },
)

bool_flag(
    name = "enable_fuzzing_code",
    build_setting_default = False,
)

config_setting(
    name = "fuzzing_code_enabled",
    flag_values = {
        ":enable_fuzzing_code": "True",
    },
)

# Flag to enable uploading performance system test results to the ES database
# that is connected to the testnet Grafana dashboard.
bool_flag(
    name = "enable_upload_perf_systest_results",
    build_setting_default = False,
)

config_setting(
    name = "upload_perf_systest_results_enabled",
    flag_values = {
        ":enable_upload_perf_systest_results": "True",
    },
)

# Flag to select the system-test backend (Farm vs local/libvirt) from the CLI.
# Run e.g. `bazel test //rs/tests/... --//bazel:system_test_infra=local` (or use
# `--config=systest_local`) to run a system-test on the local backend without
# having to set `local = True` in any BUILD.bazel file.
string_flag(
    name = "system_test_infra",
    build_setting_default = "farm",
    values = [
        "farm",
        "local",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "local_system_test_infra",
    flag_values = {
        ":system_test_infra": "local",
    },
    visibility = ["//visibility:public"],
)

# Allow targets to opt out of hermetic toolchains, in favor of the one provided
# by the system
bool_flag(
    name = "hermetic_cc",
    build_setting_default = True,
)

config_setting(
    name = "use_hermetic_cc",
    flag_values = {
        ":hermetic_cc": "True",
    },
)

string_flag(
    name = "timeout_value",
    build_setting_default = "10m",
    visibility = ["//visibility:public"],
)

write_stable_status_file_var(
    name = "version.txt",
    varname = "STABLE_VERSION",
    visibility = ["//visibility:public"],
)

write_stable_status_file_var(
    name = "commit_date_iso_8601.txt",
    varname = "STABLE_COMMIT_DATE_ISO_8601",
    visibility = ["//visibility:public"],
)

# This is the contents of the ctx.version_file,
# i.e. all non-STABLE_, volatile key value pairs outputted from ./workspace_status.sh.
#
# Targets that need to use volatile keys should depend on this directly.
# When volatile keys change the target remains cached.
# When the target has to be rebuilt it will always use the latest volatile keys.
volatile_status(
    name = "volatile-status.txt",
    visibility = ["//visibility:public"],
)

# Prebuilt protoc binary, selected by exec platform.
# Used instead of @protobuf//:protoc to avoid
# compiling protoc from C++ source on every build.
# Platform config_settings are defined in //:BUILD.bazel alongside platform() rules.
# Inspired by: https://github.com/protocolbuffers/protobuf/issues/19558
alias(
    name = "protoc",
    actual = select({
        "@bazel_tools//src/conditions:linux_x86_64": "@toolchains_protoc_hub.linux_x86_64//:bin/protoc",
        "@bazel_tools//src/conditions:linux_aarch64": "@toolchains_protoc_hub.linux_aarch_64//:bin/protoc",
        "@bazel_tools//src/conditions:darwin_x86_64": "@toolchains_protoc_hub.osx_x86_64//:bin/protoc",
        "@bazel_tools//src/conditions:darwin_arm64": "@toolchains_protoc_hub.osx_aarch_64//:bin/protoc",
    }),
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "prost_generator.sh",
        "generic_rust_bench.sh",
        "canbench.sh",
        "check_endpoints_test.sh",
        "file_size_test.sh",
    ],
    visibility = ["//visibility:public"],
)

BUILDIFIER_EXCLUDES = [
    "./.git/*",
    "./ci/src/git_changes/test_data/**",
]

buildifier(
    name = "buildifier",
    exclude_patterns = BUILDIFIER_EXCLUDES,
    lint_mode = "fix",
    mode = "fix",
    visibility = ["//visibility:public"],
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = BUILDIFIER_EXCLUDES,
    lint_mode = "warn",
    mode = "diff",
    visibility = ["//visibility:public"],
)
